added wyre debit card widget

--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,67 @@
     <div id="modal"></div>
     <div id="root"></div>
     <div id="portal1"></div>
+    <div id="wyre-dropin-widget-container"></div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://verify.sendwyre.com/js/verify-module-init-beta.js"></script>
+    <script type="text/javascript">
+        (function($) {
+          
+            // debit card popup
+            var widget = new Wyre({
+                env: 'test',
+                operation: {
+                    type: 'debitcard-hosted-dialog',
+                    dest: '',
+                    destCurrency: "ETH",
+                    sourceAmount: '',
+                    paymentMethod: 'debit-card'
+                }
+            });
+            window.Wyre = Wyre;
+
+            // debit card embedded
+            // var widget = new Wyre({
+            //     env: 'test',
+            //     accountId: 'AC-6NCFCCMBACW',
+            //     operation: {
+            //         type: 'debitcard',
+            //         dest: "ethereum:0x9EE5e175D09895b8E1E28c22b961345e1dF4B5aE",
+            //         destCurrency: "ETH",
+            //         sourceAmount: '',
+            //         paymentMethod: ''
+                    
+            //     }
+            // });
+
+            window.widget = widget;
+
+            widget.on("exit", function (e) {
+                console.log("exit", e);
+            })
+
+            widget.on("error", function (e) {
+                console.log("error", e);
+            })
+
+            widget.on("complete", function (e) {
+                console.log("complete", e );
+            });
+
+            widget.on('ready', function(e) {
+                console.log("ready", e );
+                // widget.open();
+            })
+
+            $('#buy').click(function(){
+                console.log('open')
+                widget.open();
+            })
+
+        })(jQuery);
+
+
+    </script>
   </body>
 </html>
