--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Oasis</title>
+    <title>Oasis.app</title>
+    <meta name="title" content="Oasis.app" />
+    <meta name="description" content="Trade, Borrow and Save using Dai. Place orders on the marketplace using Trade, generate Dai, a stablecoin pegged to 1 USD, on Borrow and earn savings on your Dai using Save. All on Oasis.app." />
+    <meta name="twitter:card" value="summary" />
+    <meta property="og:title" content="Oasis.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://oasis.app" />
+    <meta property="og:image" content="https://oasis.app/meta/Oasis-app.png" />
+    <meta property="og:description" content="Trade, Borrow and Save using Dai. Place orders on the marketplace using Trade, generate Dai, a stablecoin pegged to 1 USD, on Borrow and earn savings on your Dai using Save. All on Oasis.app." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
