--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <base href="%PUBLIC_URL%/"/>
+    <base href="%PUBLIC_URL%/">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
@@ -30,8 +30,8 @@
     <meta name="twitter:card" value="summary" />
     <meta property="og:title" content="Oasis.app" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://oasis.app" />
-    <meta property="og:image" content="https://oasis.app/meta/Oasis-app.png" />
+    <meta property="og:url" content="http://oasis.app/%PUBLIC_URL%" />
+    <meta property="og:image" content="https://oasis.app/%PUBLIC_URL%/meta/Oasis-app.png" />
     <meta property="og:description" content="Trade, Borrow and Save using Dai. Place orders on the marketplace using Trade, generate Dai, a stablecoin pegged to 1 USD, on Borrow and earn savings on your Dai using Save. All on Oasis.app." />
   </head>
   <body>
