Set default meta-tag info to Oasis Borrow's

--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Oasis.app</title>
-    <meta name="title" content="Oasis.app" />
-    <meta name="description" content="Trade, Borrow and Save using Dai. Place orders on the marketplace using Trade, generate Dai, a stablecoin pegged to 1 USD, on Borrow and earn savings on your Dai using Save. All on Oasis.app." />
+    <title>Oasis Borrow</title>
+    <meta name="title" content="Oasis Borrow" />
+    <meta name="description" content="Put your assets to work. Maker Vaults on Oasis Borrow make it easy to utilize your collateral by generating Dai against it. Realize liquidity through a Vault and ensure you don't lose long exposure to your collateral." />
     <meta name="twitter:card" value="summary" />
-    <meta property="og:title" content="Oasis.app" />
+    <meta property="og:title" content="Oasis Borrow" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://oasis.app/%PUBLIC_URL%" />
-    <meta property="og:image" content="https://oasis.app/%PUBLIC_URL%/meta/Oasis-app.png" />
-    <meta property="og:description" content="Trade, Borrow and Save using Dai. Place orders on the marketplace using Trade, generate Dai, a stablecoin pegged to 1 USD, on Borrow and earn savings on your Dai using Save. All on Oasis.app." />
+    <meta property="og:url" content="http://oasis.app%PUBLIC_URL%" />
+    <meta property="og:image" content="https://oasis.app%PUBLIC_URL%/meta/Oasis_Borrow.png" />
+    <meta property="og:description" content="Put your assets to work. Maker Vaults on Oasis Borrow make it easy to utilize your collateral by generating Dai against it. Realize liquidity through a Vault and ensure you don't lose long exposure to your collateral." />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
