--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Oasis Borrow</title>
     <meta name="title" content="Oasis Borrow" />
     <meta name="description" content="Put your assets to work. Maker Vaults on Oasis Borrow make it easy to utilize your collateral by generating Dai against it. Realize liquidity through a Vault and ensure you don't lose long exposure to your collateral." />
-    <meta name="twitter:card" value="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="Oasis Borrow" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://oasis.app%PUBLIC_URL%" />
