Change Borrow meta img.

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Oasis Borrow" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://oasis.app%PUBLIC_URL%" />
-    <meta property="og:image" content="https://oasis.app%PUBLIC_URL%/meta/Oasis_Borrow.png" />
+    <meta property="og:image" content="https://staging.oasis.app%PUBLIC_URL%/meta/Oasis_Borrow-cropped.png" />
     <meta property="og:description" content="Put your assets to work. Maker Vaults on Oasis Borrow make it easy to utilize your collateral by generating Dai against it. Realize liquidity through a Vault and ensure you don't lose long exposure to your collateral." />
   </head>
   <body>
